[metadata]
name = ktz
version = 0.1.1
author = Felix Hamann
author_email = felix@hamann.xyz

description = KTZ Python Tools
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/kantholtz/ktz
project_urls =
    Bug Tracker = https://github.com/kantholtz/ktz/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9

install_requires =
    gitpython ==3.*

[options.extras_require]
dev =
    build
    ipdb
    ipython
    # code quality
    black
    flake8
    pytest
    pytest-watch
    coverage
    # for notebooks
    jupyter
    pyyaml

[flake8]
# black default
max-line-length = 89


[coverage:report]
exclude_lines =
    pragma: no cover
    def __str__