[metadata]
name = ktz
version = 0.2.0rc0
author = Felix Hamann
author_email = felix@hamann.xyz

description = KTZ Python Tools
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/kantholtz/ktz
project_urls =
    Bug Tracker = https://github.com/kantholtz/ktz/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9

install_requires =
    gitpython ==3.*
    pyyaml ==5.*

[options.extras_require]
dev =
    build
    ipdb
    ipython
    # documentation
    sphinx
    sphinx-toolbox
    numpydoc
    # code quality
    black
    pytest
    pytest-watch
    coverage
    # for notebooks and demos
    tqdm
    jupyter

[flake8]
# black default
max-line-length = 89
ignore = D105, D107

[coverage:report]
exclude_lines =
    pragma: no cover
    def __str__