[metadata]
name = ktz
version = 0.4.0-pre0
author = Felix Hamann
author_email = felix@hamann.xyz

description = KTZ Python Tools
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/kantholtz/ktz
project_urls =
    Bug Tracker = https://github.com/kantholtz/ktz/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.10

install_requires =
    gitpython ~= 3.0
    pyyaml ~= 6.0

[options.extras_require]
dev =
    build
    ipdb
    ipython
    # documentation
    sphinx
    sphinx-toolbox
    numpydoc
    pydata-sphinx-theme
    # code quality
    black
    pytest
    pytest-watch
    pytest-cov
    # for notebooks and demos
    tqdm
    jupyter
    # lsp
    pyls-isort
    python-lsp-black
    python-lsp-server[flake8]


[flake8]
# black default
max-line-length = 89
ignore = D105, D107

[coverage:report]
exclude_lines =
    pragma: no cover
    def __str__
